Added JS script

--- a/index.html
+++ b/index.html
@@ -45,5 +45,6 @@
 				<p>Send me an <span class="bold">e-mail</span>!</p>
 			</div>
 		</div>
+        <script src="https://code.jquery.com/jquery-3.1.0.min.js"></script>
 	</body>
 </html>
