--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <link rel='stylesheet' type='text/css' href='css/styles.css'>
+  <link rel='stylesheet' type='text/css' href='css/stylesheet.css'>
 </head>
 
 <body>
@@ -40,8 +40,8 @@
       </p>
     </div>
   </div>
-<script src='https://code.jquery.com/jquery-3.1.0.min.js'></script>
-<script src='js/main.js'></script>
+  <script src='https://code.jquery.com/jquery-3.1.0.min.js'></script>
+  <script src='js/main.js'></script>
 </body>
 
 </html>
